--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "html2canvas-pro": "^1.5.13",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.0.0",
     "lenis": "^1.3.16",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.1.3",
     "puppeteer": "^24.32.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
